err/jalon.bdd.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jalon'...
Listing './lib/python3.5/site-packages/jalon/bdd'...
Listing './lib/python3.5/site-packages/jalon/bdd/browser'...
Listing './lib/python3.5/site-packages/jalon/bdd/browser/javascripts'...
Listing './lib/python3.5/site-packages/jalon/bdd/browser/scripts'...
Listing './lib/python3.5/site-packages/jalon/bdd/browser/templates'...
Listing './lib/python3.5/site-packages/jalon/bdd/content'...
Compiling './lib/python3.5/site-packages/jalon/bdd/content/jalon_mysql.py'...
***   File "./lib/python3.5/site-packages/jalon/bdd/content/jalon_mysql.py", line 452
    evaluations_notes = session.query(PA.DEPOSIT_STU, PA.CRITERIA, PA.CRITERIA_AVERAGE, PA.CRITERIA_CODE).filter(PA.DEPOSIT_BOX == DEPOSIT_BOX, PA.CRITERIA_CODE <> 1)
                                                                                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jalon/bdd/content/jalonsqlite.py'...
***   File "./lib/python3.5/site-packages/jalon/bdd/content/jalonsqlite.py", line 204
    print deb
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jalon/bdd/content/tables'...
Listing './lib/python3.5/site-packages/jalon/bdd/profiles'...
Listing './lib/python3.5/site-packages/jalon/bdd/profiles/default'...
Listing './lib/python3.5/site-packages/jalon/bdd/skins'...
Listing './lib/python3.5/site-packages/jalon/bdd/skins/jalon_bdd'...
Compiling './lib/python3.5/site-packages/jalon/bdd/skins/jalon_bdd/recherchUtilisateurs.py'...
***   File "./lib/python3.5/site-packages/jalon/bdd/skins/jalon_bdd/recherchUtilisateurs.py", line 13
    return context.rechercherUtilisateursByName(form["rechercheEtu"], "Etudiant", True)
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/jalon.bdd-3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
